--- a/templates/account.html
+++ b/templates/account.html
@@ -1,108 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block css %}
 
-<style>
-
-    .container{
-        max-width: 1300px;
-        margin-left: 25px;
-        margin-right: 25px;
-        margin: auto;
-    }
-
-    .row{
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        flex-wrap: wrap;
-        margin-left: 30px;
-    }
-
-    .acc-page{
-        padding: 100px 0;
-        background: radial-gradient(#fff, #f5c2c2);
-    }
-    
-    .form-container{
-        background: #fff;
-        width: 300px;
-        height: 400px;
-        position: relative;
-        text-align: center;
-        padding: 20px 0;
-        margin: auto;
-        box-shadow:0 0 20px 0px rgba(0,0,0,0.1);
-        overflow: hidden;
-    }
-    
-    .form-container span{
-        font-weight: bold;
-        padding: 0 10px;
-        display: inline-block;
-        cursor: pointer;
-        width: 100px;
-        color: #555;
-    }
-    
-    .form-btn{
-        display: inline-block;
-    }
-    
-    .form-container form{
-        padding: 0 ;
-        max-width: 300px;
-        top: 130px;
-        position: absolute;
-        transition: transform 0.5s;
-    }
-    
-    form input{
-        width: 70%;
-        height: 30px;
-        margin: 10px 0;
-        padding: 0 10px;
-        border: 1px solid #ccc;
-    }
-    
-    form .btn{
-        width: 80%;
-        border: none;
-        cursor: pointer;
-        margin: 0 10px;
-    }
-    
-    .form .btn:focus{
-        outline: none;
-    }
-    
-    #loginform{
-        left: -300px;
-    }
-    
-    #regform{
-        left: 0;
-    }
-    
-    form a{
-        font-size: 12px;
-        text-decoration: none;
-    }
-    
-    #indicator{
-        width: 100px;
-        border: none;
-        background: #ff523b;
-        height: 3px;
-        border-radius: 1.5px;
-        margin-top: 8px;
-        transform: translateX(100px);
-        transition: transform 0.5s;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-</style>
+<link rel="stylesheet" type="text/css" href="{% static 'css/account.css' %}">
 
 {% endblock css %}
 
