--- a/templates/home.html
+++ b/templates/home.html
@@ -1,271 +1,12 @@
-{% extends 'base.html' %}
 
+{% extends 'base.html' %}
+{% load static %}
 {% block title %}home{% endblock title %}
 
 {% block homeActive %}active{% endblock homeActive %}
 
-{% block css %}
-
-<style>
-
-.nav-item a:hover{
-  color: rgb(255, 255, 255);
-
-}
-
-.home{
-  background: whitesmoke;
-  padding-top:20px;
-  padding-bottom:30px
-}
-
-.hometext h1{
-  margin-bottom: 0%;
-  font-size:60px;
-  font-family:'kanit', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.hometext{
-  animation: hometext-load 300ms ease-in-out;
-}
-
-.homeimg{
-  background-image: url("./media/home/images/image1.jpg");
-  height: 500px;
-  width: 500px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  animation: homeimg-load 300ms ease-in-out;
-}
-
-.container{
-  margin-top: 60px;
-  margin-bottom: 60px;
-}
-
-.card{
-  border-radius: 10px;
-  transition: .3s ease-in-out;
-}
-
-.card:hover{
-  transform: scale(1.01);
-  transition: .3s ease-in-out;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-
-.card img{
-  border-radius: 10px;
-}
-
-.text-center h1{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  word-spacing:20px;
-}
-
-
-.contact-num img{
-  padding-top: .2rem;
-  width: 3rem;
-  height: fit-content;
-  text-align: center;
-}
-
-.contact-num h5 a{
-  color: rgb(97, 211, 82);
-  text-decoration: none;
-  font-size: 100%;
-}
-
-.line{
-  height:2px;
-  width: 100%;
-  background-color: rgb(97, 211, 82);
-}
-
-.google-map{
-  background: whitesmoke;
-  padding-top:20px;
-  padding-bottom:30px;
-}
-
-.google-map-html{
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-.visit{
-  margin: 3rem;
-}
-.visit h1{
-  font-size: 2rem;
-}
-.wrapper{
-  flex-wrap: wrap;
-}
-
-.customer{
-  min-height: 500px;
-}
-
-/* --------------------keyframes---------------------- */
-
-@keyframes hometext-load{
-  0%{
-    transform: translateX(-150%);
-    opacity: 0;
-  }
-  100%{
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
-
-@keyframes homeimg-load{
-  0%{
-    transform: translateX(100%);
-    opacity: 0;
-  }
-  100%{
-    transform: translateX(0%);
-    opacity: 1;
-  }
-}
-
-
-/* ------------------media query-------------- */
-
-/* $mobile:576px;
-$tablet:768px;
-$laptop:992px;
-$dekstop:1200px; */
-
-@media (max-width :992px ) and (min-width:600px) {
-  
-  /* .home{
-    background-image: url("./media/home/images/image1.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-color: aqua;
-    width: 100%;
-    height: 70%;
-  } */
-
-  .homeimg {
-    /* background-image: none; */
-    height: 400px;
-    width: 400px;
-  }
-
-  .hometext h1{
-    font-size: 2rem;
-    text-align: center;
-    color: rgb(0, 0, 0);
-    font-weight: 300;
-  }
-
-  .btn{
-    font-size: 16px;
-    font-weight: 200;
-    margin: 3px;
-    border: 0px ;
-    padding: 3px 6px;
-  }
-  .mx-2{
-    margin: 3px !important;
-  }
-  .card-body{
-    padding: 3px;
-  }
-  
-}
-
-@media (min-width:300px) and (max-width :700px ) {
-
-  body{
-    margin: 0;
-    padding: 0;
-  }
-
-  .home{
-    position: relative;
-    width: 100%;
-    height: 80vh;
-    overflow: hidden;
-    max-height: 250px;
-  }
-
-  .home::before{
-    background-image: url('/media/home/images/image1.jpg'); 
-    background-size: cover;
-    background-position: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    opacity: 1; 
-  }
-  
-  .hometext{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: #fff;
-    width: 80%;
-  }
-
-  .homeimg {
-    /* background-image: none; */
-    height: 0px;
-    width: 0px;
-    margin: 0%;
-    padding: 0%;
-  }
-
-  .hometext h1{
-    font-size: 2rem;
-    text-align: center;
-    color: rgb(0, 0, 0);
-    font-weight: 300;
-    margin: 10px;
-  }
-  .heading h1{
-    font-size: 20px;
-  }
-  .heading{
-    padding: 0px !important;
-  }
-  
-}
-
-@media (max-width:320px){
-  .bttns{
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media (max-width:576px){
-  .visit{
-    margin: .8rem;
-  }
-  .visit h1{
-  font-size: 1.3rem;
-  }
-  .google-map{
-    padding: 10px;
-    padding-bottom: 20px;
-  }
-
-}
-
-</style>
-
+{% block css %} 
+  <link rel="stylesheet" href="{% static 'css/home.css' %}">
 {% endblock css %}
 
 {% block body %}
@@ -391,12 +132,3 @@ $dekstop:1200px; */
 
 
 {% endblock body %}
-
-{% block js %}
-
-<script>
-
-
-</script>
-
-{% endblock js %}
