--- a/templates/products.html
+++ b/templates/products.html
@@ -1,151 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}products{% endblock title %}
 
 {% block productActive %}active{% endblock productActive %}
 
 {% block css %}
-
-<style>
-
-.nav-item a:hover{
-  color: rgb(255, 255, 255);
-
-}
-
-
-.home{
-  background: whitesmoke;
-  padding-top:60px;
-  margin-left:2px;
-  margin-bottom:5px;
-  padding-bottom:60px
-}
-
-.hometext h1{
-  margin-left:40px;
-  padding-top: 200px;
-  font-size:60px;
-  font-family:'kanit', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
-}
-
-.homeimg{
-  margin-right:100px;
-}
-
-.card{
-  box-sizing: border-box;
-  border-radius: 10px;
-  transition: .3s ease;
-
-}
-
-.card img{
-  border-radius: 10px;
-}
-
-.wrapper{
-  flex-wrap: wrap;
-}
-
-.text-center h1{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  word-spacing:20px;
-}
-
-.card{
-  width: calc(30%);
-}
-
-.card:hover{
-  transform: scale(1.01);
-  transition: .3s ease;
-  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-
-.contact-mum{
-  object-fit: contain;
-}
-
-.contact-num h5 a{
-  color: rgb(97, 211, 82);
-  text-decoration: none;
-}
-.line{
-  height:2px;
-  width: 100%;
-  background-color: rgb(97, 211, 82);
-}
-.contact-num img{
-  padding-top: .2rem;
-  width: 3rem;
-  height: fit-content;
-  text-align: center;
-}
-.heading{
-  margin: 2rem;
-  margin-bottom: 1.5rem;
-}
-.footer1{
-  background-color: whitesmoke;
-}
-
-
-/* ------------media query--------- */
-
-
-@media (max-width:991px) and (min-width:768px) {
-
-  .heading h1{
-    font-size: 20px;
-  }
-  .heading{
-    padding: 0px !important;
-  }
-  .contact-num h5 a{
-    font-size: 1.2rem;
-  }
-}
-
-@media (max-width:991px) and (min-width:576px) {
-
-  .heading h1{
-    font-size: 20px;
-  }
-  .heading{
-    padding: 0px !important;
-  }
-
-}
-
-@media (max-width:320px){
-  .heading h1{
-    font-size: 20px;
-  }
-  .heading{
-    padding: 0px !important;
-    margin: 1rem;
-  }
-  .bttns{
-    display: flex;
-    flex-direction: column;
-  }
-}
-@media (min-width:320px) and (max-width:576px){
-  .heading h1{
-    font-size: 20px;
-  }
-  .heading{
-    padding: 0px !important;
-    margin: 1rem;
-  }
-}
-</style>
-
+<link rel="stylesheet" href="{% static 'css/products.css' %}">
 {% endblock css %}
-
-
 
 {% block body %}
 
