--- a/templates/productview.html
+++ b/templates/productview.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 <!-- title -->
 
 {% block title %}productview{% endblock title %}
@@ -7,329 +7,7 @@
 <!-- css -->
 
 {% block css %}
-
-<style>
-
-.product-type{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    background-color: #DEDEDE;
-    padding: 40px 80px; 
-    max-height: 340px;
-}
-
-
-.col1 img,.product-col1 img{
-    width: 400px;
-    border-radius: 10px;
-    transition: .3s ease-in-out;
-}
-
-.col1 img:hover, .product-col1 img:hover{
-    transform: scale(1.05);
-    transition: .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.product-description h6{
-    font-size: large;
-}
-
-.product{
-    margin: 0%;
-    transform: translateY(-24px);
-    background-color: whitesmoke;
-    {% comment %} min-height:500px; {% endcomment %}
-    animation: top-product-load 300ms ease-in-out !important;
-}
-
-.container1{
-    padding:0px 40px;
-}
-
-.line{
-    width: 100%;
-    height: 3px;
-    background-color: black;
-    border-radius: 1.5px;
-}
-
-
-.product-card{
-    padding: 48px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.sub-desc{
-    max-height: 130px;
-    overflow: hidden;
-}
-
-.contact-num img{
-  padding-top: .2rem;
-  width: 5rem;
-  height: fit-content;
-  text-align: center;
-}
-
-.contact-num h2 a{
-    color: rgb(97, 211, 82);
-    text-decoration: none;
-
-}
-
-.btn{
-    padding: 5px 20px;
-    font-size: 25px;
-}
-
-
-/* -------------keyframes--------  */
-
-@keyframes top-product-load{
-    0%{
-        transform:translateY(150px) !important; 
-        opacity: 0 !important;
-    }
-    100%{
-        transform:translateY(0px) !important;
-        opacity: 1 !important;
-    }
-}
-
-/* ----------animation----------- */
-
-/* .revealline{
-    transform: translateX(-150px);
-    opacity: 0;
-    transition: .5s ease-in-out;
-}
-
-.revealline.activeline{
-    transform: translateX(0px);
-    opacity: 1;
-    transition: .5s ease-in-out;
-} */
-
-
-/* --------------media query-------------- */
-
-@media (max-width:1200px) and (min-width:992px){
-    .col1 img{
-        width: 350px;
-    }
-    .product-type{
-        max-height: 300px;
-    }
-    .product-col1 img{
-        width: 350px;
-    }
-    .sub-desc{
-        max-height: 100px;
-    }
-    .contact-num img{
-        width: 80px;
-    }
-    .contact-num a{
-        font-size: 28px;
-    }
-    .bttns button{
-        font-size: 24px;
-    }
-}
-
-@media (max-width:992px) and (min-width:769px){
-
-    .col1{
-        display: flex;
-        /* align-items: center; */
-    }
-    .col2{
-        transform: translateX(-25px);
-        transition: .3s ease-in-out;
-    }
-
-    .producttype-name h1, .prod-name h2{
-        font-size: 24px;
-    }
-
-    .col1 img{
-        width: 260px;
-    }
-    .product-type{
-        max-height: 300px;
-    }
-    .product-description h6{
-        font-size: 16px;
-    }
-
-    .product-col1 img{
-        width: 300px;
-    }
-
-    .sub-desc{
-        display: none;
-    }
-    .contact-num img{
-      padding-top: .5rem;
-      width: 3.5rem;
-      height: fit-content;
-      text-align: center;
-    }
-    .contact-num a{
-        font-size: 1.5rem;
-    }
-    .bttns button{
-        font-size: 20px;
-    }
-}
-
-@media (max-width:768px) and (min-width:576px){
-
-    .product-type{
-        padding: 40px;
-    }
-    .col1{
-        display: flex;
-        /* align-items: center; */
-    }
-    .col2{
-        transform: translateX(-25px);
-        transition: .3s ease-in-out;
-    }
-
-    .producttype-name h1, .prod-name h2{
-        font-size: 24px;
-    }
-
-    .col1 img{
-        width: 260px;
-    }
-    .product-type{
-        max-height: 300px;
-    }
-    .product-description h6{
-        font-size: 16px;
-    }
-    .product-card{
-        padding: 48px 0px;
-    }
-    
-    .product-col1{
-        display: flex;
-        align-items: center;
-        align-content: center;
-        overflow: hidden;
-    }
-
-    .product-col1 img{
-        width: 250px;
-    }
-    .sub-desc{
-        display: none;
-    }
-    .contact{
-        display: flex;
-        flex-direction: column;
-    }
-    .contact-num img{
-        padding-top: .7rem;
-        width: 3rem;
-        height: fit-content;
-        text-align: center;
-      }
-    .contact-num a{
-        font-size: 24px;
-    }
-    .bttns button{
-        font-size: 20px;
-    }
-}
-
-@media (max-width:575px){
-    .container1{
-        padding: 10px;
-    }
-    .product-card{
-        display: flex;
-        justify-content: space-around;
-        padding: 0px !important;
-        margin-bottom: 10px;
-    }
-    .product-type{
-        background-color: whitesmoke;
-        margin-bottom: 0px;
-        padding: 0px 5px;
-        transition: .3s ease-in-out;
-    }
-    .producttype-name h1, .prod-name h2{
-        font-size: 16px;
-        text-align: center;
-        text-transform: uppercase;
-    }
-    .col1{
-        transition: .3s ease-in-out;
-        display: none;
-    }
-    .product-description{
-        transition: .3s ease-in-out;
-        display: none;
-    }
-
-    .product-col1{
-        display: flex;
-        align-items: center;
-        align-content: center;
-        overflow: hidden;
-    }
-    .product-col2{
-        transform: translateX(-25px);
-    }
-    .product-col1 img{
-        width: 200px;
-    }
-    .sub-desc{
-        display: none;
-    }
-    .contact{
-        display: flex;
-        flex-direction: column;
-    }
-    .contact-num{
-        max-height: 24px;
-        align-items: center;
-        justify-content: space-around;
-    }
-    .contact-num img{
-        padding-top: .3rem;
-        width: 3rem;
-        height: fit-content;
-        text-align: center;
-      }
-    .contact-num a{
-        font-size: 1rem;
-    }
-    .btn{
-       padding: 2px 5px;
-    }
-    .bttns button{
-        font-size: 16px;
-    }
-    h6{
-        font-size: 12px;
-    }
-    .line{
-        height: 2px;
-        border-radius: 1px;
-        transition: .3s ease-in-out;
-    }
-}
-
-</style>
-
+<link rel="stylesheet" href="{% static 'css/productview.css' %}">
 {% endblock css %}
 
 <!-- body -->
@@ -517,10 +195,5 @@
 <!-- javascript -->
 
 {% block js %}
-
-<script>
-
-
-</script>
 
 {% endblock js %}
