--- a/templates/visit.html
+++ b/templates/visit.html
@@ -1,44 +1,10 @@
-{% extends 'base.html' %}
 
+{% extends 'base.html' %}
+{% load static %}
 {% block title %}Contact us{% endblock title %}
 
-{% block css %}
-<style>
-
-body{
-    background:whitesmoke;
-}
-
-.google-map{
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  padding-top:20px;
-  padding-bottom:30px;
-}
-
-.visit{
-  margin: 3rem;
-}
-
-.visit h1{
-  font-size: 2rem;
-}
-
-@media (max-width:576px){
-.visit{
-  margin: .8rem;
-}
-.visit h1{
-font-size: 1.3rem;
-}
-.google-map{
-  padding: 10px;
-  padding-bottom: 20px;
-}
-
-}
-</style>
+{% block css %} 
+<link rel="stylesheet" href="{% static 'css/visit.css' %}">
 {% endblock css %}
 
 
